--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,11 @@ crash.log
 crash.*.log
 
 # Exclude all .tfvars files, which are likely to contain sensitive data
-*.tfvars
-*.tfvars.json
+# *.tfvars
+# *.tfvars.json
+
+# But allow safe template files for multi-environment setup
+#!*-*.tfvars.example
 
 # Ignore override files as they are usually used to override resources locally
 override.tf
