Separation of terraform-state and renaming

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -41,16 +41,16 @@ jobs:
       
       - name: Create Terraform State Storage
         run: |
-          az group create --name rg-terraform-state --location "West Europe" --only-show-errors || true
+          az group create --name rg-terraform-state-v2 --location "West Europe" --only-show-errors || true
           az storage account create \
-            --name tfstate2dohealth \
-            --resource-group rg-terraform-state \
+            --name tfstate2dohealthprod \
+            --resource-group rg-terraform-state-v2 \
             --location "West Europe" \
             --sku Standard_LRS \
             --only-show-errors || true
           az storage container create \
             --name tfstate \
-            --account-name tfstate2dohealth \
+            --account-name tfstate2dohealthprod \
             --only-show-errors || true
       
       - name: Terraform Init
@@ -59,7 +59,12 @@ jobs:
           ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
           ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
-        run: terraform init
+        run: |
+          terraform init \
+            -backend-config="resource_group_name=rg-terraform-state-v2" \
+            -backend-config="storage_account_name=tfstate2dohealthprod" \
+            -backend-config="container_name=tfstate" \
+            -backend-config="key=terraform.tfstate"
       
       - name: Terraform Format Check
         run: terraform fmt -check
